[package]
name = "highway"
version = "0.1.0"
authors = ["Jens Reidel <adrian@travitia.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio-tungstenite = { git = "https://github.com/Gelbpunkt/tokio-tungstenite", default-features = false, features = ["connect"] }
dashmap = "4.0"
env_logger = { version = "0.8", default-features = false, features = [
    "termcolor",
    "atty",
    "humantime"
] }
leaky-bucket-lite = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
simd-json = { version = "0.4", default-features = false, features = [
    "allow-non-simd",
    "known-key",
    "serde_impl"
], optional = true }
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "macros"
] }
futures-util = { version = "0.3", default-features = false }

[features]
default = ["no-simd"]
no-simd = ["serde_json"]
simd = ["simd-json"]

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"
