[package]
name = "highway"
version = "0.1.1"
authors = ["Jens Reidel <adrian@travitia.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
arc-swap = "1.6"
argon2 = { version = "0.5", default-features = false, features = [
    "password-hash",
    "alloc",
] }
base64 = "0.21"
bytes = "1"
dashmap = { version = "5.1", default-features = false }
futures-util = { version = "0.3", default-features = false, features = [
    "std",
    "sink",
] }
http-body-util = { version = "0.1", default-features = false }
hyper = { version = "1", default-features = false, features = [
    "server",
    "http1",
] }
hyper-util = { version = "0.1", default-features = false, features = ["tokio"] }
leaky-bucket-lite = { version = "0.5", default-features = false, features = [
    "tokio",
    "parking_lot",
] }
libc = { version = "0.2", default-features = false }
metrics = { version = "0.21", default-features = false }
metrics-exporter-prometheus = { version = "0.12", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
sha-1 = "0.10"
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
tokio-websockets = { version = "0.5", default-features = false, features = [
    "server",
    "sha1_smol",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "parking_lot",
    "std",
] }
uuid = { version = "1.0", default-features = false, features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
inotify = { version = "0.10", default-features = false, features = ["stream"] }

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"
